adjusted and fixed the upper spacing of the pages

--- a/src/scss/organisms/container.scss
+++ b/src/scss/organisms/container.scss
@@ -36,7 +36,7 @@
 
     &--brand {
         min-height: 100vh;
-        background-image: url('https://cdn.shopify.com/s/files/1/0742/2733/t/5/assets/WDLK_Brand-Video-Poster.jpg');
+        background-image: var(--video-brand-poster);
         background-size: cover;
 
         @include media(medium) {
