--- a/src/scss/organisms/page.scss
+++ b/src/scss/organisms/page.scss
@@ -1,10 +1,5 @@
 .Page {
-    margin-top: var(--nav-height);
     text-align: center;
-
-    @include media (medium) {
-        margin-top: 0;
-    }
 
     &-copy {
         max-width: var(--screen-md);
